--- a/LCTMoodle/Views/NguoiDung/DangKy.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangKy.cshtml
@@ -34,7 +34,7 @@
                         </section>
                         <section class="noi-dung">
                             <article class="input">
-                                <input type="password" name="MatKhau" data-validate="bat-buoc" />
+                                <input type="password" id="MatKhau" name="MatKhau" data-validate="bat-buoc" />
                             </article>
                         </section>
                     </li>
@@ -44,7 +44,7 @@
                         </section>
                         <section class="noi-dung">
                             <article class="input">
-                                <input type="password" />
+                                <input type="password" id="NhapLaiMatKhau" />
                             </article>
                         </section>
                     </li>
