Code bai viet dien dan

--- a/LCTMoodle/Views/LCT/Khung.cshtml
+++ b/LCTMoodle/Views/LCT/Khung.cshtml
@@ -44,11 +44,11 @@
                         <li><a href="#"><i class="pe-7s-chat"></i></a></li>
                         <li><a href="#"><i class="pe-7s-global"></i></a></li>
                         <li>
-                            <a href="javascript:void(0)" data-show-target="HopDieuKhien">
+                            <a href="javascript:void(0)" data-mo-doi-tuong="HopDieuKhien">
                                 <img src="/Content/images/user-avatar.jpg" />
                                 <span>@Session["NguoiDung"]</span>
                             </a>
-                            <div class="hop-dieu-khien" data-target="HopDieuKhien">
+                            <div class="hop-dieu-khien" data-doi-tuong="HopDieuKhien">
                                 <ul>
                                     <li><a href="/NguoiDung/"><i class="pe-7s-user"></i><span>Thông tin cá nhân</span></a></li>
                                     <li><a href="#"><i class="pe-7s-config"></i><span>Cài đặt</span></a></li>
