--- a/LCTMoodle/Views/BinhLuan/_Khung.cshtml
+++ b/LCTMoodle/Views/BinhLuan/_Khung.cshtml
@@ -1,11 +1,14 @@
-﻿@model List<DTOLayer.BinhLuanViewDTO>
+﻿@{
+    var ketQua = DAOLayer.BinhLuanDAO.layTheoDoiTuong((string)ViewData["LoaiDoiTuong"], (int)ViewData["MaDoiTuong"]);
+    var danhSachBinhLuan = ketQua.trangThai == 0 ? ketQua.ketQua as List<DTOLayer.BinhLuanViewDTO> : new List<DTOLayer.BinhLuanViewDTO>();
+}
 
 <section data-doi-tuong="khung-binh-luan" class="khung-binh-luan">
     <section class="khung-danh-sach">
         <ul data-doi-tuong="danh-sach">
-            @foreach (var binhLuan in Model)
+            @foreach (var binhLuan in danhSachBinhLuan)
             {
-                @Html.Partial("~/Views/BinhLuan/_Muc.cshtml", binhLuan);
+                @Html.Partial("~/Views/BinhLuan/_Item.cshtml", binhLuan);
             }
         </ul>
     </section>
