--- a/LCTMoodle/Content/styles/KhoaHoc/Xem.css
+++ b/LCTMoodle/Content/styles/KhoaHoc/Xem.css
@@ -1,68 +1,73 @@
-﻿.muc-bai-viet {
+﻿/*#region Diễn đàn */
+
+[data-hien-thi="dien-dan"] .muc-bai-viet {
     border: 1px solid #eee;
     margin-bottom: 10px;
 }
 
-.khung-binh-luan {
+[data-hien-thi="dien-dan"] .khung-binh-luan {
     border-top: 1px solid #f5f5f5;
     background-color: #fcfcfc;
 }
 
 /*#region Khung bài viết */
 
-.khung-bai-viet {
+[data-hien-thi="dien-dan"] .khung-bai-viet {
     background-color: #fff;
 }
 
-.khung-bai-viet .khung-thong-tin {
-    display: flex;
-    background-color: #fcfcfc;
-    border-bottom: 1px solid #f8f8f8;
-    padding: 10px;
-}
-
-    .khung-bai-viet .khung-thong-tin .trai {
-        min-width: 40px;
-        max-width: 40px;
-        margin-right: 10px;
+    [data-hien-thi="dien-dan"] .khung-bai-viet .khung-thong-tin {
+        display: flex;
+        background-color: #fcfcfc;
+        border-bottom: 1px solid #f8f8f8;
+        padding: 10px;
     }
 
-        .khung-bai-viet .khung-thong-tin .trai .hinh-dai-dien {
-            height: 40px;
-            width: 40px;
+        [data-hien-thi="dien-dan"] .khung-bai-viet .khung-thong-tin .trai {
+            min-width: 40px;
+            max-width: 40px;
+            margin-right: 10px;
         }
 
-            .khung-bai-viet .khung-thong-tin .trai .hinh-dai-dien img {
+            [data-hien-thi="dien-dan"] .khung-bai-viet .khung-thong-tin .trai .hinh-dai-dien {
                 height: 40px;
                 width: 40px;
             }
 
-    .khung-bai-viet .khung-thong-tin .phai {
-        width: 100%;
-        line-height: 20px;
+                [data-hien-thi="dien-dan"] .khung-bai-viet .khung-thong-tin .trai .hinh-dai-dien img {
+                    height: 40px;
+                    width: 40px;
+                }
+
+        [data-hien-thi="dien-dan"] .khung-bai-viet .khung-thong-tin .phai {
+            width: 100%;
+            line-height: 20px;
+        }
+
+            [data-hien-thi="dien-dan"] .khung-bai-viet .khung-thong-tin .phai .nguoi-dung a {
+                font-weight: bold;
+                font-size: 14px;
+                color: #333;
+            }
+
+            [data-hien-thi="dien-dan"] .khung-bai-viet .khung-thong-tin .phai .bai-viet .thoi-gian {
+                font-size: 12px;
+                color: #888;
+            }
+
+    [data-hien-thi="dien-dan"] .khung-bai-viet .khung-noi-dung {
+        padding: 10px;
+        color: #333;
     }
 
-        .khung-bai-viet .khung-thong-tin .phai .nguoi-dung a {
+        [data-hien-thi="dien-dan"] .khung-bai-viet .khung-noi-dung .tieu-de {
             font-weight: bold;
             font-size: 14px;
-            color: #333;
+            line-height: 25px;
+            margin-bottom: 5px;
         }
 
-        .khung-bai-viet .khung-thong-tin .phai .bai-viet .thoi-gian {
-            font-size: 12px;
-            color: #888;
-        }
+/*#endregion */
 
-.khung-bai-viet .khung-noi-dung {
-    padding: 10px;
-    color: #333;
-}
-
-    .khung-bai-viet .khung-noi-dung .tieu-de {
-        font-weight: bold;
-        font-size: 14px;
-        line-height: 25px;
-        margin-bottom: 5px;
-    }
 
 /*#endregion */
