--- a/LCTMoodle/Views/NguoiDung/DangKy.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangKy.cshtml
@@ -24,7 +24,7 @@
                         </section>
                         <section class="noi-dung">
                             <article class="input">
-                                <input type="text" name="TenTaiKhoan" data-validate="bat-buoc"/>
+                                <input type="text" id="TenTaiKhoan" name="TenTaiKhoan" data-validate="bat-buoc"/>
                             </article>
                         </section>
                     </li>
