--- a/LCTMoodle/Views/TrangChu/FormMau.cshtml
+++ b/LCTMoodle/Views/TrangChu/FormMau.cshtml
@@ -6,14 +6,16 @@
 
 }
 @section Scripts {
-
+    <script>
+        khoiTaoLCTForm($('#form_mau'));
+    </script>
 }
 
 <article class="hop hop-2-vien">
     <section class="tieu-de">
         Tên form
     </section>
-    <form action="#" method="post" class="noi-dung lct-form">
+    <form id="form_mau" action="#" method="post" class="noi-dung lct-form">
         <article>
             <ul>
                 <li class="loi-dan">
