--- a/LCTMoodle/Views/BaiVietBaiGiang/_Item.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiGiang/_Item.cshtml
@@ -1,12 +1,13 @@
 ﻿@model DTOLayer.BaiVietBaiGiangViewDTO
 
-<li class="muc-bai-viet" data-ma=@Model.ma>
-    <section class="tieu-de">
+<li data-doi-tuong="muc-bai-viet" class="muc-bai-viet" data-ma=@Model.ma>
+    <h2 class="tieu-de">
+        <i class="pe-7s-notebook"></i>
         @Model.tieuDe
-    </section>
+    </h2>
     <section class="khung-noi-dung">
         <section class="noi-dung">
-
+            @Html.Raw(Model.noiDung)
         </section>
         <section class="khung-thong-tin">
 
