--- a/LCTMoodle/Views/BaiVietDienDan/_DanhSach.cshtml
+++ b/LCTMoodle/Views/BaiVietDienDan/_DanhSach.cshtml
@@ -4,7 +4,7 @@
     <section class="tieu-de">
         Danh sách bài viết
     </section>
-    <ul id="danh_sach_bai_viet" class="noi-dung danh-sach-bai-viet">
+    <ul id="danh_sach_bai_viet" class="noi-dung">
         @foreach(var baiViet in Model)
         {
             @Html.Partial("~/Views/BaiVietDienDan/_Item.cshtml", baiViet, ViewData);
