--- a/LCTMoodle/Views/BaiVietBaiTap/_Item.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiTap/_Item.cshtml
@@ -27,6 +27,12 @@
             <section class="noi-dung noi-dung-ckeditor">
                 @Html.Raw(Model.noiDung)
             </section>
+            <section class="tap-tin">
+                <a href="#">
+                    <img src="#" />
+                    <span>@Model.tapTin.ten</span>
+                </a>
+            </section>
         </section>
         <section class="khung-dieu-khien"></section>
     </section>
