--- a/LCTMoodle/Views/ChuDe/QuanLy.cshtml
+++ b/LCTMoodle/Views/ChuDe/QuanLy.cshtml
@@ -2,7 +2,7 @@
     ViewData["TieuDe"] = "Quản lý chủ đề";
     Layout = "~/Views/LCT/Khung.cshtml";
 
-    var danhSachPhamVi = DTOLayer.PhamVi.layDanhSach();
+    var danhSachPhamVi = Data.PhamVi.layDanhSach();
 }
 
 @section Styles {
