--- a/LCTMoodle/Views/BaiVietBaiGiang/_Form.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiGiang/_Form.cshtml
@@ -13,14 +13,14 @@
                         </article>
                     </section>
                 </li>
-                <li data-doi-tuong="tao-bai-viet">
+                <li data-an>
                     <section class="noi-dung">
                         <section class="input">
                             <textarea data-validate="bat-buoc" name="NoiDung" data-input-type="editor" placeholder="Nội dung"></textarea>
                         </section>
                     </section>
                 </li>
-                <li data-doi-tuong="tao-bai-viet">
+                <li data-an>
                     <section class="noi-dung">
                         <article class="input">
                             <input type="file" name="TapTin" />
@@ -28,7 +28,7 @@
                     </section>
                 </li>
             </ul>
-            <section data-doi-tuong="tao-bai-viet" class="lct-khung-button">
+            <section data-an class="lct-khung-button">
                 <button type="submit" class="chap-nhan">
                     Đăng
                 </button>
