--- a/LCTMoodle/Views/BaiVietBaiTap/_Form.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiTap/_Form.cshtml
@@ -13,21 +13,21 @@
                         </article>
                     </section>
                 </li>
-                <li data-doi-tuong="tao-bai-viet">
+                <li data-an>
                     <section class="noi-dung">
                         <section class="input">
                             <textarea data-validate="bat-buoc" name="NoiDung" data-input-type="editor" placeholder="Nội dung"></textarea>
                         </section>
                     </section>
                 </li>
-                <li data-doi-tuong="tao-bai-viet">
+                <li data-an>
                     <section class="noi-dung">
                         <article class="input">
                             <input type="file" name="TapTin" />
                         </article>
                     </section>
                 </li>
-                <li data-doi-tuong="tao-bai-viet">
+                <li data-an>
                     <section class="noi-dung">
                         <article class="input">
                             <input data-chuc-nang="tat-mo" data-mo="thoi-han" name="ThoiDiemHetHan" type="checkbox" data-text="Bài tập có thời hạn" />
@@ -37,7 +37,7 @@
                     </section>
                 </li>
             </ul>
-            <section data-doi-tuong="tao-bai-viet" class="lct-khung-button">
+            <section data-an class="lct-khung-button">
                 <button type="submit" class="chap-nhan">
                     Đăng
                 </button>
