--- a/LCTMoodle/Views/BinhLuan/_Khung.cshtml
+++ b/LCTMoodle/Views/BinhLuan/_Khung.cshtml
@@ -16,24 +16,24 @@
         <form data-doi-tuong="binh-luan-form" class="lct-form">
             <input name="Loai" value="@ViewData["LoaiDoiTuong"]" type="hidden" />
             <input name="DoiTuong" value="@ViewData["MaDoiTuong"]" type="hidden" />
-            <ul style="padding: 0 10px 10px 10px; margin-top: 10px;">
-                <li style="margin: 0; width: calc(100% - 35px);">
+            <ul style="flex-wrap: nowrap; padding: 0 10px 10px 10px; margin-top: 10px;">
+                <li style="margin: 0; width: 100%;">
                     <article class="noi-dung">
                         <article class="input" style="border-right: 0;">
                             <input data-validate="bat-buoc" type="text" name="NoiDung" placeholder="Viết bình luận của bạn" />
                         </article>
                     </article>
                 </li>
-                <li style="margin: 0; width: 35px;">
+                <li style="margin: 0; width: 38px;">
                     <article class="noi-dung">
                         <article class="input" style="border-left: 0;">
                             <input type="file" name="name" value="" />
                         </article>
                     </article>
                 </li>
-                @*<li style="margin: 0; width: 30px;">
-                    <button class="chap-nhan" style="width: 32px; height: 32px; margin: 0; padding: 0;"><i class="pe-7s-check" style="font-size: 20px;"></i></button>
-                </li>*@
+                <li style="width: 55px; margin: 0; margin-left: 4px;">
+                    <button style="padding: 0; margin: 0; width: 100%; height: 32px;" class="chap-nhan">Đăng</button>
+                </li>
             </ul>
         </form>
     </section>
