Them Phan Hoi-Dap

--- a/LCTMoodle/Views/HoiDap/Index.cshtml
+++ b/LCTMoodle/Views/HoiDap/Index.cshtml
@@ -9,4 +9,72 @@
 @section Scripts {
 }
 
-<h1>Hello hỏi đáp</h1>
+<article class="hop hop-1-vien">
+    <section class="tieu-de">Danh sách câu hỏi</section>
+    <section class="noi-dung">
+        <article class="cau-hoi">
+            <ul>
+                <li>
+                    <div class="thong-tin">
+                        <div class="diem">
+                            <div class="so-diem">5</div>
+                            <div class="tieu-de">Điểm</div>
+                        </div>
+                        <div class="tra-loi">
+                            <div class="so-cau-tra-loi">2</div>
+                            <div class="tieu-de">Trả lời</div>
+                        </div>
+                    </div>
+                    <div class="chi-tiet">
+                        <div class="tieu-de">
+                            <a href="/HoiDap/CauHoi/1">
+                                Cách kết nối CSDL trong MVC5
+                            </a>
+                        </div>
+                        <div class="thong-tin-dang">đăng lúc 24/5/2015 bởi <a href="#">NMC</a></div>
+                    </div>
+                </li>
+                <li>
+                    <div class="thong-tin">
+                        <div class="diem">
+                            <div class="so-diem">5</div>
+                            <div class="tieu-de">Điểm</div>
+                        </div>
+                        <div class="tra-loi">
+                            <div class="so-cau-tra-loi">2</div>
+                            <div class="tieu-de">Trả lời</div>
+                        </div>
+                    </div>
+                    <div class="chi-tiet">
+                        <div class="tieu-de">
+                            <a href="#">
+                                Cách cài đặt Esclipse để lập trình Android
+                            </a>
+                        </div>
+                        <div class="thong-tin-dang">đăng lúc 24/5/2015 bởi <a href="#">NMC</a></div>
+                    </div>
+                </li>
+                <li>
+                    <div class="thong-tin">
+                        <div class="diem">
+                            <div class="so-diem">5</div>
+                            <div class="tieu-de">Điểm</div>
+                        </div>
+                        <div class="tra-loi">
+                            <div class="so-cau-tra-loi">2</div>
+                            <div class="tieu-de">Trả lời</div>
+                        </div>
+                    </div>
+                    <div class="chi-tiet">
+                        <div class="tieu-de">
+                            <a href="#">
+                                Cách lập trình swift trên Windows
+                            </a>
+                        </div>
+                        <div class="thong-tin-dang">đăng lúc 24/5/2015 bởi <a href="#">NMC</a></div>
+                    </div>
+                </li>
+            </ul>
+        </article>
+    </section>
+</article>
