--- a/LCTMoodle/Views/NguoiDung/DangNhap.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangNhap.cshtml
@@ -24,7 +24,7 @@
                         </section>
                         <section class="noi-dung">
                             <article class="input">
-                                <input type="text" name="TenTaiKhoan" />                                
+                                <input type="text" name="TenTaiKhoan" data-validate="bat-buoc"/>                                
                             </article>                            
                         </section>
                     </li>
@@ -34,7 +34,7 @@
                         </section>
                         <section class="noi-dung">
                             <article class="input">
-                                <input type="password" name="MatKhau" />
+                                <input type="password" name="MatKhau" data-validate="bat-buoc" />
                             </article>
                         </section>
                     </li>
