--- a/LCTMoodle/Views/LCT/Khung.cshtml
+++ b/LCTMoodle/Views/LCT/Khung.cshtml
@@ -72,7 +72,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="/HoiDap/">
                                 <i class="pe-7s-help1"></i>
                                 <u></u>
                                 Hỏi đáp
